<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mySwitch="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >

    <TextView
        android:id="@+id/anim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anim"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RelativeLayout
        android:id="@+id/h"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/seltime"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <CheckBox
            android:id="@+id/show_shuffle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/h2"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:text="@string/shuffle" />
        <Button
            android:id="@+id/show_dir"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/show_shuffle"
            android:background="@drawable/custom_btn_sandrift"
            android:text="@string/images" />

        <RelativeLayout
            android:id="@+id/h2"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/p"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/plus"
                android:text="+" />

            <Button
                android:id="@+id/m"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/minus"
                android:text="-" />

            <TextView
                android:id="@+id/interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <TextView
            android:id="@+id/pict"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/show_dir"
            android:layout_alignBottom="@+id/show_dir"
            android:layout_alignParentRight="true"

            android:layout_toRightOf="@+id/show_dir"

            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/save"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/save"
            android:onClick="saveOnClick"
            android:background="@drawable/button" />

        <ImageView
            android:id="@+id/refresh"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/refresh"
            android:layout_below="@+id/battery"
            android:layout_centerHorizontal="true"
            android:onClick="refreshOnClick"
            android:layout_marginTop="18dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Turn off if battery is low"
            android:id="@+id/battery"
            android:layout_below="@+id/show_dir"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:checked="false" />

    </RelativeLayout>





</LinearLayout>
